# joulupukki-worker

./: .packer.yml  Dockerfile  README.rst  config.py  requirements.txt  setup.cfg
debian/: control  cron.d  gbp.conf  init  install  rules
debian/patches/: 0000_fix_default_config_file
joulupukki/worker/controllers/: root.py
joulupukki/worker/lib/: debpacker.py  osxpacker.py  packer.py  rpmpacker.py  win32packer.py  winpacker.py
joulupukki/worker/worker/: builder.py  docker_builder.py  manager.py  osx_builder.py
